# meson-minimal-ti-c28x-cgt

./: .gitignore  README.md  build-example.sh  c2000.txt  meson.build  shell.sh
docker/: Dockerfile  build.sh
